--- a/Blog42/Blog42.csproj
+++ b/Blog42/Blog42.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CryptHelper.cs" />
     <Compile Include="Models\Blog42Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
