Regras de Permissão, Criação de Provider e  Filter, Configuração no Web.Config

--- a/Blog42/Web.config
+++ b/Blog42/Web.config
@@ -15,10 +15,15 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <roleManager enabled="true" defaultProvider="PermissionProvider">
+      <providers>
+        <add name="PermissionProvider" type="Blog42.Security.PermissionProvider" />
+      </providers>
+    </roleManager>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Admin/User/Login" timeout="2880" />
     </authentication>
     <pages>
       <namespaces>
