--- a/Blog42/Web.config
+++ b/Blog42/Web.config
@@ -15,6 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" defaultRedirect="~/Error">
+    </customErrors>
     <roleManager enabled="true" defaultProvider="PermissionProvider">
       <providers>
         <add name="PermissionProvider" type="Blog42.Security.PermissionProvider" />
