--- a/Blog42/Blog42.csproj
+++ b/Blog42/Blog42.csproj
@@ -180,6 +180,8 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="DataAccess\PostDAO.cs" />
+    <Compile Include="DataAccess\CommentDAO.cs" />
     <Compile Include="DataAccess\UserDAO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
