--- a/Blog42.Tests/App.config
+++ b/Blog42.Tests/App.config
@@ -4,13 +4,12 @@
     that apply only to the Test project.
 -->
 <configuration>
-    <appSettings>
+  <appSettings>
 
-    </appSettings>
-
-    <connectionStrings>
-
-    </connectionStrings>
+  </appSettings>
+  <connectionStrings>
+   <add name="Blog42Entities" connectionString="metadata=res://*/Models.Blog42Model.csdl|res://*/Models.Blog42Model.ssdl|res://*/Models.Blog42Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Blog42.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
