Implementação de testes em Home e Comment controllers e correção dos erros identificados

--- a/Blog42.Tests/App.config
+++ b/Blog42.Tests/App.config
@@ -7,6 +7,16 @@
   <appSettings>
 
   </appSettings>
+  <system.web>
+    <roleManager enabled="true" defaultProvider="MockRoleProvider">
+      <providers>
+        <add name="MockRoleProvider" type="Blog42.Tests.Common.MockRoleProvider, Blog42.Tests"/>
+      </providers>
+    </roleManager>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Admin/User/Login" timeout="2880" />
+    </authentication>
+  </system.web>
   <connectionStrings>
    <add name="Blog42Entities" connectionString="metadata=res://*/Models.Blog42Model.csdl|res://*/Models.Blog42Model.ssdl|res://*/Models.Blog42Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Blog42.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
