Erro customizado ativo

--- a/Blog42/Web.config
+++ b/Blog42/Web.config
@@ -14,7 +14,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="Off" defaultRedirect="~/Error">
+    <customErrors mode="On" defaultRedirect="~/Error">
     </customErrors>
     <roleManager enabled="true" defaultProvider="PermissionProvider">
       <providers>
