Teste de deleção de comentário, paginação de postagem e correção de erros encontrados

--- a/Blog42.Tests/Blog42.Tests.csproj
+++ b/Blog42.Tests/Blog42.Tests.csproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <Compile Include="Common\GeneralSetup.cs" />
     <Compile Include="Common\MockRoleProvider.cs" />
+    <Compile Include="Controllers\PostControllerTest.cs" />
     <Compile Include="Controllers\CommentControllerTest.cs" />
     <Compile Include="Helpers\PermissionHelper.cs" />
     <Compile Include="Helpers\RequestHelper.cs" />
